Revision history for MooseX-Extended

{{$NEXT}}
          - Add support for an 'accessor' shortcut
          - Add support for an 'initializer' shortcut
          - Add attribute "styles" to allow greater customization of how
            attribute methods are created.
          - Remove a test file that didn't actually test the bug we were
            looking for.

0.29      2022-08-23 09:05:52 CEST

          - Bump minimum version of B::Hooks::AtRuntime to avoid a sporadic
            segfault.

0.28      2022-08-08 09:30:37 CEST

          - No functional change. Bump Test::Compile version to avoid
            CPAN test failures

0.27      2022-08-07 09:42:24 CEST

          - Optional Syntax::Keyword::Try support
          - Rename repo from moosex-extreme to moosex-extended
          - Add a compilation test to try to expose an intermittent
            but with Test::Compile. So far, we cannot reproduce

0.26      2022-07-29 08:28:21 CEST

          - "naked" fields (those no writer, default, or builder) that cannot
            have a value set will now issue a warning. (thanks, tobyink)
          - `is => 'rwp'` is now supported
          - Use new version of B::Hooks::AtRuntime. Classes now remain
            immutable under the debugger. Thanks to haarg and Ben Morrow for
            following up on that.
          - Move perl critic deps to test dependencies and update
            dist.ini in the process. (thanks, waterkip!)

0.25      2022-06-16 16:02:05 CEST

          - `builder` can now accept a coderef (stolen from Moo). (thanks,
            tobyink)
          - Disable true/make_immutable when loaded via stringy eval (thanks,
            tobyink)

0.24      2022-06-14 19:15:53 CEST

          - Of *course* we found some important typos :)

0.23      2022-06-14 19:01:31 CEST

          - Add a tutorial

0.22      2022-06-12 11:04:07 CEST

          - A field's `init_arg` can now begin with an underscore. (thanks,
            tobyink!)